hw5.output
State 12 conflicts: 5 shift/reduce


Grammar

    0 $accept: Prog $end

    1 Prog: InitMarker stmts FinishMarker

    2 stmts: stmts stmt
    3      | stmt

    4 stmt: StartScopeMarker LC stmts RC EndScopeMarker
    5     | StartScopeMarkerIfCond Type ID SC
    6     | StartScopeMarkerIfCond setIsAssignmentStmt Type ID ASSIGN Exp SC
    7     | setCondFlagOff setIsAssignmentStmt ID ASSIGN Exp SC
    8     | setCondFlagOff PRINT STRING SC
    9     | setCondFlagOff PRINT ID SC
   10     | setCondFlagOff INPUT ID SC
   11     | IF LP ForceBoolExp SetCondFlagOn RP M stmt EndScopeMarkerIfCond
   12     | IF LP ForceBoolExp SetCondFlagOn RP M stmt EndScopeMarkerIfCond ELSE SetCondFlagOn N M stmt EndScopeMarkerIfCond
   13     | WHILE LP M ForceBoolExp SetCondFlagOn RP WhileMarker M stmt N EndScopeMarkerIfCond
   14     | setCondFlagOff BREAK SC
   15     | FOREACH LP ForceIntId TempType RP OP Exp SC
   16     | SWITCH LP ForceTempExp N RP LC CasesList RC

   17 CasesList: CaseStat CasesList
   18          | CaseStat

   19 CaseStat: CASE NUM TempType COLON SetCondFlagOn M stmt BREAK SC N EndScopeMarkerIfCond

   20 OP: PLUS
   21   | MINUS
   22   | MULT
   23   | DIV

   24 TempType: CELSIUS
   25         | FAHRENHEIT
   26         | KELVIN

   27 Type: TempType
   28     | INT
   29     | BOOL

   30 ForceTempExp: Exp

   31 ForceBoolExp: Exp

   32 ForceIntId: ID

   33 Exp: LP Exp RP
   34    | Exp PLUS Exp
   35    | Exp MINUS Exp
   36    | Exp MULT Exp
   37    | Exp DIV Exp
   38    | ID
   39    | NUM
   40    | NUM TempType
   41    | TRUE
   42    | FALSE
   43    | NOT Exp
   44    | Exp OR M Exp
   45    | Exp AND M Exp
   46    | Exp REL_OP Exp

   47 setCondFlagOff: %empty

   48 SetCondFlagOn: %empty

   49 InitMarker: %empty

   50 FinishMarker: %empty

   51 WhileMarker: %empty

   52 EndScopeMarker: %empty

   53 StartScopeMarker: %empty

   54 EndScopeMarkerIfCond: %empty

   55 StartScopeMarkerIfCond: %empty

   56 M: %empty

   57 N: %empty

   58 setIsAssignmentStmt: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
LP (258) 11 12 13 15 16 33
RP (259) 11 12 13 15 16 33
LC (260) 4 16
RC (261) 4 16
SC (262) 5 6 7 8 9 10 14 15 19
CELSIUS (263) 24
FAHRENHEIT (264) 25
KELVIN (265) 26
INT (266) 28
PRINT (267) 8 9
INPUT (268) 10
ID (269) 5 6 7 9 10 32 38
STRING (270) 8
TRUE (271) 41
FALSE (272) 42
BOOL (273) 29
IF (274) 11 12
ELSE (275) 12
WHILE (276) 13
BREAK (277) 14 19
NUM (278) 19 39 40
SWITCH (279) 16
CASE (280) 19
COLON (281) 19
FOREACH (282) 15
IFX (283)
ASSIGN (284) 6 7
OR (285) 44
AND (286) 45
REL_OP (287) 46
PLUS (288) 20 34
MINUS (289) 21 35
MULT (290) 22 36
DIV (291) 23 37
NOT (292) 43


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Prog (39)
    on left: 1, on right: 0
stmts (40)
    on left: 2 3, on right: 1 2 4
stmt (41)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16, on right: 2 3 11 12
    13 19
CasesList (42)
    on left: 17 18, on right: 16 17
CaseStat (43)
    on left: 19, on right: 17 18
OP (44)
    on left: 20 21 22 23, on right: 15
TempType (45)
    on left: 24 25 26, on right: 15 19 27 40
Type (46)
    on left: 27 28 29, on right: 5 6
ForceTempExp (47)
    on left: 30, on right: 16
ForceBoolExp (48)
    on left: 31, on right: 11 12 13
ForceIntId (49)
    on left: 32, on right: 15
Exp (50)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46, on right: 6
    7 15 30 31 33 34 35 36 37 43 44 45 46
setCondFlagOff (51)
    on left: 47, on right: 7 8 9 10 14
SetCondFlagOn (52)
    on left: 48, on right: 11 12 13 19
InitMarker (53)
    on left: 49, on right: 1
FinishMarker (54)
    on left: 50, on right: 1
WhileMarker (55)
    on left: 51, on right: 13
EndScopeMarker (56)
    on left: 52, on right: 4
StartScopeMarker (57)
    on left: 53, on right: 4
EndScopeMarkerIfCond (58)
    on left: 54, on right: 11 12 13 19
StartScopeMarkerIfCond (59)
    on left: 55, on right: 5 6
M (60)
    on left: 56, on right: 11 12 13 19 44 45
N (61)
    on left: 57, on right: 12 13 16 19
setIsAssignmentStmt (62)
    on left: 58, on right: 6 7


State 0

    0 $accept: . Prog $end

    $default  reduce using rule 49 (InitMarker)

    Prog        go to state 1
    InitMarker  go to state 2


State 1

    0 $accept: Prog . $end

    $end  shift, and go to state 3


State 2

    1 Prog: InitMarker . stmts FinishMarker

    IF       shift, and go to state 4
    WHILE    shift, and go to state 5
    SWITCH   shift, and go to state 6
    FOREACH  shift, and go to state 7

    LC        reduce using rule 53 (StartScopeMarker)
    PRINT     reduce using rule 47 (setCondFlagOff)
    INPUT     reduce using rule 47 (setCondFlagOff)
    ID        reduce using rule 47 (setCondFlagOff)
    BREAK     reduce using rule 47 (setCondFlagOff)
    $default  reduce using rule 55 (StartScopeMarkerIfCond)

    stmts                   go to state 8
    stmt                    go to state 9
    setCondFlagOff          go to state 10
    StartScopeMarker        go to state 11
    StartScopeMarkerIfCond  go to state 12


State 3

    0 $accept: Prog $end .

    $default  accept


State 4

   11 stmt: IF . LP ForceBoolExp SetCondFlagOn RP M stmt EndScopeMarkerIfCond
   12     | IF . LP ForceBoolExp SetCondFlagOn RP M stmt EndScopeMarkerIfCond ELSE SetCondFlagOn N M stmt EndScopeMarkerIfCond

    LP  shift, and go to state 13


State 5

   13 stmt: WHILE . LP M ForceBoolExp SetCondFlagOn RP WhileMarker M stmt N EndScopeMarkerIfCond

    LP  shift, and go to state 14


State 6

   16 stmt: SWITCH . LP ForceTempExp N RP LC CasesList RC

    LP  shift, and go to state 15


State 7

   15 stmt: FOREACH . LP ForceIntId TempType RP OP Exp SC

    LP  shift, and go to state 16


State 8

    1 Prog: InitMarker stmts . FinishMarker
    2 stmts: stmts . stmt

    IF       shift, and go to state 4
    WHILE    shift, and go to state 5
    SWITCH   shift, and go to state 6
    FOREACH  shift, and go to state 7

    $end      reduce using rule 50 (FinishMarker)
    LC        reduce using rule 53 (StartScopeMarker)
    PRINT     reduce using rule 47 (setCondFlagOff)
    INPUT     reduce using rule 47 (setCondFlagOff)
    ID        reduce using rule 47 (setCondFlagOff)
    BREAK     reduce using rule 47 (setCondFlagOff)
    $default  reduce using rule 55 (StartScopeMarkerIfCond)

    stmt                    go to state 17
    setCondFlagOff          go to state 10
    FinishMarker            go to state 18
    StartScopeMarker        go to state 11
    StartScopeMarkerIfCond  go to state 12


State 9

    3 stmts: stmt .

    $default  reduce using rule 3 (stmts)


State 10

    7 stmt: setCondFlagOff . setIsAssignmentStmt ID ASSIGN Exp SC
    8     | setCondFlagOff . PRINT STRING SC
    9     | setCondFlagOff . PRINT ID SC
   10     | setCondFlagOff . INPUT ID SC
   14     | setCondFlagOff . BREAK SC

    PRINT  shift, and go to state 19
    INPUT  shift, and go to state 20
    BREAK  shift, and go to state 21

    $default  reduce using rule 58 (setIsAssignmentStmt)

    setIsAssignmentStmt  go to state 22


State 11

    4 stmt: StartScopeMarker . LC stmts RC EndScopeMarker

    LC  shift, and go to state 23


State 12

    5 stmt: StartScopeMarkerIfCond . Type ID SC
    6     | StartScopeMarkerIfCond . setIsAssignmentStmt Type ID ASSIGN Exp SC

    CELSIUS     shift, and go to state 24
    FAHRENHEIT  shift, and go to state 25
    KELVIN      shift, and go to state 26
    INT         shift, and go to state 27
    BOOL        shift, and go to state 28

    CELSIUS     [reduce using rule 58 (setIsAssignmentStmt)]
    FAHRENHEIT  [reduce using rule 58 (setIsAssignmentStmt)]
    KELVIN      [reduce using rule 58 (setIsAssignmentStmt)]
    INT         [reduce using rule 58 (setIsAssignmentStmt)]
    BOOL        [reduce using rule 58 (setIsAssignmentStmt)]

    TempType             go to state 29
    Type                 go to state 30
    setIsAssignmentStmt  go to state 31


State 13

   11 stmt: IF LP . ForceBoolExp SetCondFlagOn RP M stmt EndScopeMarkerIfCond
   12     | IF LP . ForceBoolExp SetCondFlagOn RP M stmt EndScopeMarkerIfCond ELSE SetCondFlagOn N M stmt EndScopeMarkerIfCond

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    ForceBoolExp  go to state 38
    Exp           go to state 39


State 14

   13 stmt: WHILE LP . M ForceBoolExp SetCondFlagOn RP WhileMarker M stmt N EndScopeMarkerIfCond

    $default  reduce using rule 56 (M)

    M  go to state 40


State 15

   16 stmt: SWITCH LP . ForceTempExp N RP LC CasesList RC

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    ForceTempExp  go to state 41
    Exp           go to state 42


State 16

   15 stmt: FOREACH LP . ForceIntId TempType RP OP Exp SC

    ID  shift, and go to state 43

    ForceIntId  go to state 44


State 17

    2 stmts: stmts stmt .

    $default  reduce using rule 2 (stmts)


State 18

    1 Prog: InitMarker stmts FinishMarker .

    $default  reduce using rule 1 (Prog)


State 19

    8 stmt: setCondFlagOff PRINT . STRING SC
    9     | setCondFlagOff PRINT . ID SC

    ID      shift, and go to state 45
    STRING  shift, and go to state 46


State 20

   10 stmt: setCondFlagOff INPUT . ID SC

    ID  shift, and go to state 47


State 21

   14 stmt: setCondFlagOff BREAK . SC

    SC  shift, and go to state 48


State 22

    7 stmt: setCondFlagOff setIsAssignmentStmt . ID ASSIGN Exp SC

    ID  shift, and go to state 49


State 23

    4 stmt: StartScopeMarker LC . stmts RC EndScopeMarker

    IF       shift, and go to state 4
    WHILE    shift, and go to state 5
    SWITCH   shift, and go to state 6
    FOREACH  shift, and go to state 7

    LC        reduce using rule 53 (StartScopeMarker)
    PRINT     reduce using rule 47 (setCondFlagOff)
    INPUT     reduce using rule 47 (setCondFlagOff)
    ID        reduce using rule 47 (setCondFlagOff)
    BREAK     reduce using rule 47 (setCondFlagOff)
    $default  reduce using rule 55 (StartScopeMarkerIfCond)

    stmts                   go to state 50
    stmt                    go to state 9
    setCondFlagOff          go to state 10
    StartScopeMarker        go to state 11
    StartScopeMarkerIfCond  go to state 12


State 24

   24 TempType: CELSIUS .

    $default  reduce using rule 24 (TempType)


State 25

   25 TempType: FAHRENHEIT .

    $default  reduce using rule 25 (TempType)


State 26

   26 TempType: KELVIN .

    $default  reduce using rule 26 (TempType)


State 27

   28 Type: INT .

    $default  reduce using rule 28 (Type)


State 28

   29 Type: BOOL .

    $default  reduce using rule 29 (Type)


State 29

   27 Type: TempType .

    $default  reduce using rule 27 (Type)


State 30

    5 stmt: StartScopeMarkerIfCond Type . ID SC

    ID  shift, and go to state 51


State 31

    6 stmt: StartScopeMarkerIfCond setIsAssignmentStmt . Type ID ASSIGN Exp SC

    CELSIUS     shift, and go to state 24
    FAHRENHEIT  shift, and go to state 25
    KELVIN      shift, and go to state 26
    INT         shift, and go to state 27
    BOOL        shift, and go to state 28

    TempType  go to state 29
    Type      go to state 52


State 32

   33 Exp: LP . Exp RP

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    Exp  go to state 53


State 33

   38 Exp: ID .

    $default  reduce using rule 38 (Exp)


State 34

   41 Exp: TRUE .

    $default  reduce using rule 41 (Exp)


State 35

   42 Exp: FALSE .

    $default  reduce using rule 42 (Exp)


State 36

   39 Exp: NUM .
   40    | NUM . TempType

    CELSIUS     shift, and go to state 24
    FAHRENHEIT  shift, and go to state 25
    KELVIN      shift, and go to state 26

    $default  reduce using rule 39 (Exp)

    TempType  go to state 54


State 37

   43 Exp: NOT . Exp

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    Exp  go to state 55


State 38

   11 stmt: IF LP ForceBoolExp . SetCondFlagOn RP M stmt EndScopeMarkerIfCond
   12     | IF LP ForceBoolExp . SetCondFlagOn RP M stmt EndScopeMarkerIfCond ELSE SetCondFlagOn N M stmt EndScopeMarkerIfCond

    $default  reduce using rule 48 (SetCondFlagOn)

    SetCondFlagOn  go to state 56


State 39

   31 ForceBoolExp: Exp .
   34 Exp: Exp . PLUS Exp
   35    | Exp . MINUS Exp
   36    | Exp . MULT Exp
   37    | Exp . DIV Exp
   44    | Exp . OR M Exp
   45    | Exp . AND M Exp
   46    | Exp . REL_OP Exp

    OR      shift, and go to state 57
    AND     shift, and go to state 58
    REL_OP  shift, and go to state 59
    PLUS    shift, and go to state 60
    MINUS   shift, and go to state 61
    MULT    shift, and go to state 62
    DIV     shift, and go to state 63

    $default  reduce using rule 31 (ForceBoolExp)


State 40

   13 stmt: WHILE LP M . ForceBoolExp SetCondFlagOn RP WhileMarker M stmt N EndScopeMarkerIfCond

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    ForceBoolExp  go to state 64
    Exp           go to state 39


State 41

   16 stmt: SWITCH LP ForceTempExp . N RP LC CasesList RC

    $default  reduce using rule 57 (N)

    N  go to state 65


State 42

   30 ForceTempExp: Exp .
   34 Exp: Exp . PLUS Exp
   35    | Exp . MINUS Exp
   36    | Exp . MULT Exp
   37    | Exp . DIV Exp
   44    | Exp . OR M Exp
   45    | Exp . AND M Exp
   46    | Exp . REL_OP Exp

    OR      shift, and go to state 57
    AND     shift, and go to state 58
    REL_OP  shift, and go to state 59
    PLUS    shift, and go to state 60
    MINUS   shift, and go to state 61
    MULT    shift, and go to state 62
    DIV     shift, and go to state 63

    $default  reduce using rule 30 (ForceTempExp)


State 43

   32 ForceIntId: ID .

    $default  reduce using rule 32 (ForceIntId)


State 44

   15 stmt: FOREACH LP ForceIntId . TempType RP OP Exp SC

    CELSIUS     shift, and go to state 24
    FAHRENHEIT  shift, and go to state 25
    KELVIN      shift, and go to state 26

    TempType  go to state 66


State 45

    9 stmt: setCondFlagOff PRINT ID . SC

    SC  shift, and go to state 67


State 46

    8 stmt: setCondFlagOff PRINT STRING . SC

    SC  shift, and go to state 68


State 47

   10 stmt: setCondFlagOff INPUT ID . SC

    SC  shift, and go to state 69


State 48

   14 stmt: setCondFlagOff BREAK SC .

    $default  reduce using rule 14 (stmt)


State 49

    7 stmt: setCondFlagOff setIsAssignmentStmt ID . ASSIGN Exp SC

    ASSIGN  shift, and go to state 70


State 50

    2 stmts: stmts . stmt
    4 stmt: StartScopeMarker LC stmts . RC EndScopeMarker

    RC       shift, and go to state 71
    IF       shift, and go to state 4
    WHILE    shift, and go to state 5
    SWITCH   shift, and go to state 6
    FOREACH  shift, and go to state 7

    LC        reduce using rule 53 (StartScopeMarker)
    PRINT     reduce using rule 47 (setCondFlagOff)
    INPUT     reduce using rule 47 (setCondFlagOff)
    ID        reduce using rule 47 (setCondFlagOff)
    BREAK     reduce using rule 47 (setCondFlagOff)
    $default  reduce using rule 55 (StartScopeMarkerIfCond)

    stmt                    go to state 17
    setCondFlagOff          go to state 10
    StartScopeMarker        go to state 11
    StartScopeMarkerIfCond  go to state 12


State 51

    5 stmt: StartScopeMarkerIfCond Type ID . SC

    SC  shift, and go to state 72


State 52

    6 stmt: StartScopeMarkerIfCond setIsAssignmentStmt Type . ID ASSIGN Exp SC

    ID  shift, and go to state 73


State 53

   33 Exp: LP Exp . RP
   34    | Exp . PLUS Exp
   35    | Exp . MINUS Exp
   36    | Exp . MULT Exp
   37    | Exp . DIV Exp
   44    | Exp . OR M Exp
   45    | Exp . AND M Exp
   46    | Exp . REL_OP Exp

    RP      shift, and go to state 74
    OR      shift, and go to state 57
    AND     shift, and go to state 58
    REL_OP  shift, and go to state 59
    PLUS    shift, and go to state 60
    MINUS   shift, and go to state 61
    MULT    shift, and go to state 62
    DIV     shift, and go to state 63


State 54

   40 Exp: NUM TempType .

    $default  reduce using rule 40 (Exp)


State 55

   34 Exp: Exp . PLUS Exp
   35    | Exp . MINUS Exp
   36    | Exp . MULT Exp
   37    | Exp . DIV Exp
   43    | NOT Exp .
   44    | Exp . OR M Exp
   45    | Exp . AND M Exp
   46    | Exp . REL_OP Exp

    $default  reduce using rule 43 (Exp)


State 56

   11 stmt: IF LP ForceBoolExp SetCondFlagOn . RP M stmt EndScopeMarkerIfCond
   12     | IF LP ForceBoolExp SetCondFlagOn . RP M stmt EndScopeMarkerIfCond ELSE SetCondFlagOn N M stmt EndScopeMarkerIfCond

    RP  shift, and go to state 75


State 57

   44 Exp: Exp OR . M Exp

    $default  reduce using rule 56 (M)

    M  go to state 76


State 58

   45 Exp: Exp AND . M Exp

    $default  reduce using rule 56 (M)

    M  go to state 77


State 59

   46 Exp: Exp REL_OP . Exp

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    Exp  go to state 78


State 60

   34 Exp: Exp PLUS . Exp

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    Exp  go to state 79


State 61

   35 Exp: Exp MINUS . Exp

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    Exp  go to state 80


State 62

   36 Exp: Exp MULT . Exp

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    Exp  go to state 81


State 63

   37 Exp: Exp DIV . Exp

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    Exp  go to state 82


State 64

   13 stmt: WHILE LP M ForceBoolExp . SetCondFlagOn RP WhileMarker M stmt N EndScopeMarkerIfCond

    $default  reduce using rule 48 (SetCondFlagOn)

    SetCondFlagOn  go to state 83


State 65

   16 stmt: SWITCH LP ForceTempExp N . RP LC CasesList RC

    RP  shift, and go to state 84


State 66

   15 stmt: FOREACH LP ForceIntId TempType . RP OP Exp SC

    RP  shift, and go to state 85


State 67

    9 stmt: setCondFlagOff PRINT ID SC .

    $default  reduce using rule 9 (stmt)


State 68

    8 stmt: setCondFlagOff PRINT STRING SC .

    $default  reduce using rule 8 (stmt)


State 69

   10 stmt: setCondFlagOff INPUT ID SC .

    $default  reduce using rule 10 (stmt)


State 70

    7 stmt: setCondFlagOff setIsAssignmentStmt ID ASSIGN . Exp SC

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    Exp  go to state 86


State 71

    4 stmt: StartScopeMarker LC stmts RC . EndScopeMarker

    $default  reduce using rule 52 (EndScopeMarker)

    EndScopeMarker  go to state 87


State 72

    5 stmt: StartScopeMarkerIfCond Type ID SC .

    $default  reduce using rule 5 (stmt)


State 73

    6 stmt: StartScopeMarkerIfCond setIsAssignmentStmt Type ID . ASSIGN Exp SC

    ASSIGN  shift, and go to state 88


State 74

   33 Exp: LP Exp RP .

    $default  reduce using rule 33 (Exp)


State 75

   11 stmt: IF LP ForceBoolExp SetCondFlagOn RP . M stmt EndScopeMarkerIfCond
   12     | IF LP ForceBoolExp SetCondFlagOn RP . M stmt EndScopeMarkerIfCond ELSE SetCondFlagOn N M stmt EndScopeMarkerIfCond

    $default  reduce using rule 56 (M)

    M  go to state 89


State 76

   44 Exp: Exp OR M . Exp

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    Exp  go to state 90


State 77

   45 Exp: Exp AND M . Exp

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    Exp  go to state 91


State 78

   34 Exp: Exp . PLUS Exp
   35    | Exp . MINUS Exp
   36    | Exp . MULT Exp
   37    | Exp . DIV Exp
   44    | Exp . OR M Exp
   45    | Exp . AND M Exp
   46    | Exp . REL_OP Exp
   46    | Exp REL_OP Exp .

    PLUS   shift, and go to state 60
    MINUS  shift, and go to state 61
    MULT   shift, and go to state 62
    DIV    shift, and go to state 63

    $default  reduce using rule 46 (Exp)


State 79

   34 Exp: Exp . PLUS Exp
   34    | Exp PLUS Exp .
   35    | Exp . MINUS Exp
   36    | Exp . MULT Exp
   37    | Exp . DIV Exp
   44    | Exp . OR M Exp
   45    | Exp . AND M Exp
   46    | Exp . REL_OP Exp

    MULT  shift, and go to state 62
    DIV   shift, and go to state 63

    $default  reduce using rule 34 (Exp)


State 80

   34 Exp: Exp . PLUS Exp
   35    | Exp . MINUS Exp
   35    | Exp MINUS Exp .
   36    | Exp . MULT Exp
   37    | Exp . DIV Exp
   44    | Exp . OR M Exp
   45    | Exp . AND M Exp
   46    | Exp . REL_OP Exp

    MULT  shift, and go to state 62
    DIV   shift, and go to state 63

    $default  reduce using rule 35 (Exp)


State 81

   34 Exp: Exp . PLUS Exp
   35    | Exp . MINUS Exp
   36    | Exp . MULT Exp
   36    | Exp MULT Exp .
   37    | Exp . DIV Exp
   44    | Exp . OR M Exp
   45    | Exp . AND M Exp
   46    | Exp . REL_OP Exp

    $default  reduce using rule 36 (Exp)


State 82

   34 Exp: Exp . PLUS Exp
   35    | Exp . MINUS Exp
   36    | Exp . MULT Exp
   37    | Exp . DIV Exp
   37    | Exp DIV Exp .
   44    | Exp . OR M Exp
   45    | Exp . AND M Exp
   46    | Exp . REL_OP Exp

    $default  reduce using rule 37 (Exp)


State 83

   13 stmt: WHILE LP M ForceBoolExp SetCondFlagOn . RP WhileMarker M stmt N EndScopeMarkerIfCond

    RP  shift, and go to state 92


State 84

   16 stmt: SWITCH LP ForceTempExp N RP . LC CasesList RC

    LC  shift, and go to state 93


State 85

   15 stmt: FOREACH LP ForceIntId TempType RP . OP Exp SC

    PLUS   shift, and go to state 94
    MINUS  shift, and go to state 95
    MULT   shift, and go to state 96
    DIV    shift, and go to state 97

    OP  go to state 98


State 86

    7 stmt: setCondFlagOff setIsAssignmentStmt ID ASSIGN Exp . SC
   34 Exp: Exp . PLUS Exp
   35    | Exp . MINUS Exp
   36    | Exp . MULT Exp
   37    | Exp . DIV Exp
   44    | Exp . OR M Exp
   45    | Exp . AND M Exp
   46    | Exp . REL_OP Exp

    SC      shift, and go to state 99
    OR      shift, and go to state 57
    AND     shift, and go to state 58
    REL_OP  shift, and go to state 59
    PLUS    shift, and go to state 60
    MINUS   shift, and go to state 61
    MULT    shift, and go to state 62
    DIV     shift, and go to state 63


State 87

    4 stmt: StartScopeMarker LC stmts RC EndScopeMarker .

    $default  reduce using rule 4 (stmt)


State 88

    6 stmt: StartScopeMarkerIfCond setIsAssignmentStmt Type ID ASSIGN . Exp SC

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    Exp  go to state 100


State 89

   11 stmt: IF LP ForceBoolExp SetCondFlagOn RP M . stmt EndScopeMarkerIfCond
   12     | IF LP ForceBoolExp SetCondFlagOn RP M . stmt EndScopeMarkerIfCond ELSE SetCondFlagOn N M stmt EndScopeMarkerIfCond

    IF       shift, and go to state 4
    WHILE    shift, and go to state 5
    SWITCH   shift, and go to state 6
    FOREACH  shift, and go to state 7

    LC        reduce using rule 53 (StartScopeMarker)
    PRINT     reduce using rule 47 (setCondFlagOff)
    INPUT     reduce using rule 47 (setCondFlagOff)
    ID        reduce using rule 47 (setCondFlagOff)
    BREAK     reduce using rule 47 (setCondFlagOff)
    $default  reduce using rule 55 (StartScopeMarkerIfCond)

    stmt                    go to state 101
    setCondFlagOff          go to state 10
    StartScopeMarker        go to state 11
    StartScopeMarkerIfCond  go to state 12


State 90

   34 Exp: Exp . PLUS Exp
   35    | Exp . MINUS Exp
   36    | Exp . MULT Exp
   37    | Exp . DIV Exp
   44    | Exp . OR M Exp
   44    | Exp OR M Exp .
   45    | Exp . AND M Exp
   46    | Exp . REL_OP Exp

    AND     shift, and go to state 58
    REL_OP  shift, and go to state 59
    PLUS    shift, and go to state 60
    MINUS   shift, and go to state 61
    MULT    shift, and go to state 62
    DIV     shift, and go to state 63

    $default  reduce using rule 44 (Exp)


State 91

   34 Exp: Exp . PLUS Exp
   35    | Exp . MINUS Exp
   36    | Exp . MULT Exp
   37    | Exp . DIV Exp
   44    | Exp . OR M Exp
   45    | Exp . AND M Exp
   45    | Exp AND M Exp .
   46    | Exp . REL_OP Exp

    REL_OP  shift, and go to state 59
    PLUS    shift, and go to state 60
    MINUS   shift, and go to state 61
    MULT    shift, and go to state 62
    DIV     shift, and go to state 63

    $default  reduce using rule 45 (Exp)


State 92

   13 stmt: WHILE LP M ForceBoolExp SetCondFlagOn RP . WhileMarker M stmt N EndScopeMarkerIfCond

    $default  reduce using rule 51 (WhileMarker)

    WhileMarker  go to state 102


State 93

   16 stmt: SWITCH LP ForceTempExp N RP LC . CasesList RC

    CASE  shift, and go to state 103

    CasesList  go to state 104
    CaseStat   go to state 105


State 94

   20 OP: PLUS .

    $default  reduce using rule 20 (OP)


State 95

   21 OP: MINUS .

    $default  reduce using rule 21 (OP)


State 96

   22 OP: MULT .

    $default  reduce using rule 22 (OP)


State 97

   23 OP: DIV .

    $default  reduce using rule 23 (OP)


State 98

   15 stmt: FOREACH LP ForceIntId TempType RP OP . Exp SC

    LP     shift, and go to state 32
    ID     shift, and go to state 33
    TRUE   shift, and go to state 34
    FALSE  shift, and go to state 35
    NUM    shift, and go to state 36
    NOT    shift, and go to state 37

    Exp  go to state 106


State 99

    7 stmt: setCondFlagOff setIsAssignmentStmt ID ASSIGN Exp SC .

    $default  reduce using rule 7 (stmt)


State 100

    6 stmt: StartScopeMarkerIfCond setIsAssignmentStmt Type ID ASSIGN Exp . SC
   34 Exp: Exp . PLUS Exp
   35    | Exp . MINUS Exp
   36    | Exp . MULT Exp
   37    | Exp . DIV Exp
   44    | Exp . OR M Exp
   45    | Exp . AND M Exp
   46    | Exp . REL_OP Exp

    SC      shift, and go to state 107
    OR      shift, and go to state 57
    AND     shift, and go to state 58
    REL_OP  shift, and go to state 59
    PLUS    shift, and go to state 60
    MINUS   shift, and go to state 61
    MULT    shift, and go to state 62
    DIV     shift, and go to state 63


State 101

   11 stmt: IF LP ForceBoolExp SetCondFlagOn RP M stmt . EndScopeMarkerIfCond
   12     | IF LP ForceBoolExp SetCondFlagOn RP M stmt . EndScopeMarkerIfCond ELSE SetCondFlagOn N M stmt EndScopeMarkerIfCond

    $default  reduce using rule 54 (EndScopeMarkerIfCond)

    EndScopeMarkerIfCond  go to state 108


State 102

   13 stmt: WHILE LP M ForceBoolExp SetCondFlagOn RP WhileMarker . M stmt N EndScopeMarkerIfCond

    $default  reduce using rule 56 (M)

    M  go to state 109


State 103

   19 CaseStat: CASE . NUM TempType COLON SetCondFlagOn M stmt BREAK SC N EndScopeMarkerIfCond

    NUM  shift, and go to state 110


State 104

   16 stmt: SWITCH LP ForceTempExp N RP LC CasesList . RC

    RC  shift, and go to state 111


State 105

   17 CasesList: CaseStat . CasesList
   18          | CaseStat .

    CASE  shift, and go to state 103

    $default  reduce using rule 18 (CasesList)

    CasesList  go to state 112
    CaseStat   go to state 105


State 106

   15 stmt: FOREACH LP ForceIntId TempType RP OP Exp . SC
   34 Exp: Exp . PLUS Exp
   35    | Exp . MINUS Exp
   36    | Exp . MULT Exp
   37    | Exp . DIV Exp
   44    | Exp . OR M Exp
   45    | Exp . AND M Exp
   46    | Exp . REL_OP Exp

    SC      shift, and go to state 113
    OR      shift, and go to state 57
    AND     shift, and go to state 58
    REL_OP  shift, and go to state 59
    PLUS    shift, and go to state 60
    MINUS   shift, and go to state 61
    MULT    shift, and go to state 62
    DIV     shift, and go to state 63


State 107

    6 stmt: StartScopeMarkerIfCond setIsAssignmentStmt Type ID ASSIGN Exp SC .

    $default  reduce using rule 6 (stmt)


State 108

   11 stmt: IF LP ForceBoolExp SetCondFlagOn RP M stmt EndScopeMarkerIfCond .
   12     | IF LP ForceBoolExp SetCondFlagOn RP M stmt EndScopeMarkerIfCond . ELSE SetCondFlagOn N M stmt EndScopeMarkerIfCond

    ELSE  shift, and go to state 114
